# toyEngine

./: .gitignore  CMakeLists.txt  TODO
include/: scene.h  test.h  windowProcess.h
include/core/: baseObjects.h  baseStructures.h  camera.h  debugPrint.h  resourceManager.h  screenMovementsPublisher.h  shader.h  texture.h  voxelBase.h
include/environment/: atmosphere.h  sky.h  sun.h
include/glad/: glad.h
include/toyPhysics/: aabb.h  bvh.h  voxelHitResult.h
include/utils/: ballMesh.h  circleMesh.h
include/voxels/: chunkVoxel.h  plane.h  planeVoxel.h  simpleBallVoxel.h  tree.h
shaders/: atmosphere.frag  atmosphere.vert  constColor.frag  constColor.vert  skyMesh.frag  skyMesh.vert  sun.frag  sun.vert  test.frag  texture.frag  texture.vert
src/: glad.c  main.cpp  scene.cpp  windowProcess.cpp
src/core/: voxelBase.cpp
src/environment/: atmosphere.cpp  sky.cpp  sun.cpp
src/toyPhysics/: aabb.cpp  bvh.cpp
src/utils/: ballMesh.cpp  circleMesh.cpp
src/voxels/: chunkVoxel.cpp  plane.cpp  planeVoxel.cpp  simpleBall.cpp  simpleBallVoxel.cpp  tree.cpp  treeVoxel.cpp
